update: schema, jwt, default api

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGO_URL = "mongodb+srv://lwinaungkyaw:test@tips.jrhcjcg.mongodb.net/"
+MONGO_URL = "mongodb+srv://lwinaungkyawnativedev:freelancePass@cluster0.5zfikbp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 PORT = 3000
+
+SECRET_KEY = "lkfadslfjakldjfladlfja"
